# PPC-index

./: README.md
dataset/enumeration/dblp/queries/: query_edge_16.gr  query_edge_24.gr  query_edge_32.gr  query_edge_40.gr  query_edge_8.gr  query_vertex_16.gr  query_vertex_24.gr  query_vertex_32.gr  query_vertex_40.gr  query_vertex_8.gr
dataset/enumeration/eu2005/queries/: query_edge_16.gr  query_edge_24.gr  query_edge_32.gr  query_edge_40.gr  query_edge_8.gr  query_vertex_16.gr  query_vertex_24.gr  query_vertex_32.gr  query_vertex_40.gr  query_vertex_8.gr
dataset/enumeration/human/queries/: query_edge_16.gr  query_edge_24.gr  query_edge_32.gr  query_edge_40.gr  query_edge_8.gr  query_vertex_16.gr  query_vertex_24.gr  query_vertex_32.gr  query_vertex_40.gr  query_vertex_8.gr
dataset/enumeration/wordnet/queries/: query_edge_16.gr  query_edge_24.gr  query_edge_32.gr  query_edge_40.gr  query_edge_8.gr  query_vertex_16.gr  query_vertex_24.gr  query_vertex_32.gr  query_vertex_40.gr  query_vertex_8.gr
dataset/enumeration/yeast/: yeast.gr
dataset/query_generator/: generate_queries.py
dataset/query_generator/query_generator/: generator.pxd  generator.pyx  setup.py
index/: ppc_index.pxd  ppc_index.pyx  setup.py
index/lib/: CMakeLists.txt  auxiliary.hpp  config.hpp  cycle_counting.hpp  embedding.hpp  feature_counter.hpp  feature_selector.hpp  graph.hpp  index.hpp  path_counting.hpp  sample.cpp  subgraph_enumeration.hpp  subgraph_retrieval.hpp  utils.hpp
index/lib/configuration/: CMakeLists.txt.tmp  config.h
index/lib/graph/: graph.cpp  graph.h
index/lib/index/: CMakeLists.txt  cycle_counting.cpp  cycle_counting.h  feature_counter.h  feature_selector.cpp  feature_selector.h  index.cpp  index.h  path_counting.cpp  path_counting.h
index/lib/nd/: CMakeLists.txt  bucket.h  computesetintersection.cpp  computesetintersection.h  hierarchy.cpp  k3-4.cpp  kcore.cpp  ktruss.cpp  nd.h  nd_interface.cpp  nd_interface.h  nucleus_decomposition.cpp  nucleus_decomposition.h  util.cpp
index/lib/src/: CMakeLists.txt  auxiliary.cpp  auxiliary.h  debug.cpp  run_build_index.cpp  run_enumeration.cpp  run_retrieval.cpp  subgraph_enumeration.cpp  subgraph_enumeration.h  subgraph_enumeration_for_sample.hpp.tmp  subgraph_retrieval.cpp  subgraph_retrieval.h
index/lib/utility/: CMakeLists.txt  core_decomposition.cpp  core_decomposition.h  embedding.cpp  embedding.h  utils.cpp  utils.h
run_exp/enumeration/: build_index.py  run_enumeration_exp.py  run_iso_test.py
run_exp/retrieval/: build_index.py  result_ana.py  run_exp.py
(+139 files in other folders)
